# ai-search-engine

./: .gitignore  CMakeLists.txt  README.md
offline/: CMakeLists.txt
offline/page/: CMakeLists.txt
offline/page/conf/: page.conf
offline/page/include/: DirScanner.h  FileProcessor.h  PageLib.h  PageLibPreprocessor.h  RssItem.h  XmlReader.h
offline/page/src/: Configuration.cc  DirScanner.cc  FileProcessor.cc  PageLib.cc  PageLibPreprocessor.cc  main.cc
offline/word/: CMakeLists.txt
offline/word/conf/: jieba.conf  word.conf
offline/word/include/: DictProducer.h  JiebaConfig.h  WordConfig.h  WordSegmentation.h
offline/word/src/: DictProducer.cc  JiebaConfig.cc  WordConfig.cc  WordSegmentation.cc  main.cc
online/: CMakeLists.txt
online/common/include/: Configuration.h  SplitTool.h
online/common/src/: Configuration.cc  SplitTool.cc
online/conf/: online.conf
online/recommend/include/: CandidateResult.h  Dictionary.h  KeyRecommender.h
online/recommend/src/: CandidateResult.cc  Dictionary.cc  KeyRecommender.cc
online/search/include/: WebPage.h  WebPageQuery.h  WebPageSearcher.h
online/search/src/: WebPage.cc  WebPageQuery.cc  WebPageSearcher.cc
online/server/: main.cc
online/server/include/: ProtocolParser.h  SearchEngineServer.h  ThreadPool.h
online/server/src/: ProtocolParser.cc  SearchEngineServer.cc  ThreadPool.cc
